data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_306.wast
;; 7. **Infinite Loop Check with Nop and Control Structure Mixing**:    - Mix `nop` instructions with various control structures like `block`, `loop`, and `if` within a single loop. The test will check the `resetSig` method’s ability to maintain correct control flow and context.    - Constraint: Control structures should behave as intended without entering an infinite loop because of `nop`.

(assert_invalid
  (module
    (func $mix-nop-and-loop
      (loop (nop) (br 0) (nop))
    )
  )
  "unexpected end of section or function"
)